groups in GROUP message moved to headers; deleted interfaces of encryptions utils; deleted reader and saved classes; using GCM for AES; removed node config (not server/client configs); renamed contexts to chains, and using it instead of centralized message handling; replaced custom to URI links; added BST for chain manager; renamed package token to tokens; using JWT instead of name@password; saving key and hash checking; saving key moved to main; encryption of headers moved to message; using set where it possible; added exceptions: ImpossibleRuntimeException, InvalidEndpointSyntax, InvalidSandnodeLinkException, BSTBusyPosition, DataNotEncryptedException, EncryptionTypeException, HeadersSerializationException, KeyAlreadySaved, KeyHashCheckingSecurityException, LinkDoesNotMatchException, MemberNotFound, NoSuchHasherException, PrivateKeyNotFoundException, SandnodeMessageException, SandnodeSecurityException, UnknownSandnodeErrorException, WrongKeyException