@@ -5,15 +5,7 @@ import net.result.sandnode.messages.util.IMessageType;
 
 public class ExpectedMessageException extends SandnodeException {
     public ExpectedMessageException(IMessageType messageType, IMessage message) {
-        super(String.format("Expected type of message - \"%s\", got \"%s\"", messageType.name(), message));
-    }
-
-    public ExpectedMessageException(
-            IMessageType messageType1,
-            IMessageType messageType2,
-            IMessage message
-    ) {
-        super(String.format("Expected type of message - \"%s\" or \"%s\", got \"%s\"", messageType1.name(), messageType2.name(), message));
+        super("Expected type of message - \"%s\", got \"%s\"".formatted(messageType.name(), message));
     }
 
     public static void check(IMessage req, IMessageType messageType) throws ExpectedMessageException {
