@@ -1,39 +1,60 @@
 package net.result.sandnode.server;
 
-import net.result.sandnode.encryption.interfaces.IEncryption;
 import net.result.sandnode.exceptions.*;
-import net.result.sandnode.messages.util.Connection;
 import net.result.sandnode.util.IOControl;
+import net.result.sandnode.chain.server.IServerChainManager;
 import net.result.sandnode.util.db.IMember;
-import net.result.sandnode.encryption.GlobalKeyStorage;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
 
 import java.net.Socket;
 
-import static net.result.sandnode.encryption.Encryption.NONE;
-
 public class Session {
-    public final GlobalKeyStorage globalKeyStorage;
+    private static final Logger LOGGER = LogManager.getLogger(Session.class);
     public final SandnodeServer server;
     public final Socket socket;
     public final IOControl io;
     public IMember member;
-    public IEncryption encryption = NONE;
+    public final IServerChainManager chainManager;
 
     public Session(
             @NotNull SandnodeServer server,
-            @NotNull Connection connection,
             @NotNull Socket socket,
-            @NotNull GlobalKeyStorage globalKeyStorage
-    ) throws InputStreamException, OutputStreamException {
+            @NotNull IServerChainManager chainManager,
+            @NotNull IOControl io
+    ) {
         this.server = server;
         this.socket = socket;
-        this.globalKeyStorage = globalKeyStorage.copy();
-        io = new IOControl(socket, connection, this.globalKeyStorage);
+        this.chainManager = chainManager;
+        chainManager.setSession(this);
+        this.io = io;
+
+        new Thread(() -> {
+            try {
+                this.io.sendingLoop();
+            } catch (InterruptedException | SandnodeException e) {
+                if (io.isConnected()) {
+                    LOGGER.error("Error sending message", e);
+                }
+                Thread.currentThread().interrupt();
+            }
+        }, "%s/Sending".formatted(IOControl.getIP(socket))).start();
+
+        new Thread(() -> {
+            try {
+                io.receivingLoop();
+            } catch (InterruptedException | SandnodeException e) {
+                if (io.isConnected()) {
+                    LOGGER.error("Error receiving message", e);
+                }
+                Thread.currentThread().interrupt();
+            }
+        }, "%s/Receiving".formatted(IOControl.getIP(socket))).start();
     }
 
     @Override
     public String toString() {
-        return String.format("<%s %s %s>", getClass().getSimpleName(), IOControl.getIP(socket), member);
+        return "<%s %s %s>".formatted(getClass().getSimpleName(), IOControl.getIP(socket), member);
     }
 }
