@@ -1,5 +1,6 @@
 package net.result.sandnode.util;
 
+import net.result.sandnode.exceptions.InvalidEndpointSyntax;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 
@@ -8,23 +9,32 @@ import java.net.URISyntaxException;
 
 public record Endpoint(String host, int port) {
 
-    public static @NotNull Endpoint getFromString(@NotNull String input, int defaultPort) throws URISyntaxException {
-        URI uri = new URI(String.format("dummy://%s", input));
+    public static @NotNull Endpoint getFromString(@NotNull String input, int defaultPort) throws InvalidEndpointSyntax {
+        URI uri;
+        try {
+            uri = new URI("dummy://%s".formatted(input));
+        } catch (URISyntaxException e) {
+            throw new InvalidEndpointSyntax(e);
+        }
         String host = uri.getHost();
         int port = uri.getPort();
 
         if (host == null) {
-            uri = new URI(String.format("dummy://[%s]", input));
+            try {
+                uri = new URI("dummy://[%s]".formatted(input));
+            } catch (URISyntaxException e) {
+                throw new InvalidEndpointSyntax(e);
+            }
             host = uri.getHost();
             port = defaultPort;
 
             if (host == null) {
-                throw new URISyntaxException(input, "Unknown error");
+                throw new InvalidEndpointSyntax(input, "Unknown error");
             }
         }
 
         if (port > 65535) {
-            throw new URISyntaxException(input, "Too big port");
+            throw new InvalidEndpointSyntax(input, "Too big port");
         }
 
         return new Endpoint(host, port != -1 ? port : defaultPort);
@@ -33,7 +43,7 @@ public record Endpoint(String host, int port) {
     @Contract(pure = true)
     @Override
     public @NotNull String toString() {
-        return String.format("%s:%d", host, port);
+        return "%s:%d".formatted(host, port);
     }
 
     public @NotNull String toString(int defaultPort) {
